# PyChamber

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  PyChamber.spec  README.md  gen_ref_pages.py  index.html  main.py  makefile  mkdocs.yml  objects.inv  pychamber.spec  pyproject.toml  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  build_windows.yml  dev.yml  main.yml  preview.yml  release.yml
SUMMARY/: index.html
application/: index.html
calibration/: index.html
changelog/: index.html
contributing/: index.html
docs/: SUMMARY.md  api.md  application.md  calibration.md  changelog.md  contributing.md  index.md  installation.md  interact_with_data.md  modules.md  plugin.md  scripting.md  taking_a_measurement.md  the_interface.md  usage.md
docs/reference/: api.md  index.md  logger.md  main_window.md  models.md  network_model.md  plugins.md  polarization.md  settings.md  utils.md  widgets.md
installation/: index.html
interact_with_data/: index.html
pychamber/: __init__.py  api.py  app.py  calibration.py  controller.py  experiment.py  experiment_result.py  jog_worker.py  launch.py  lib.py  logger.py  main_window.py  math_fns.py  network_model.py  polarization.py  positioner.py  scan_worker.py  settings.py  utils.py  worker.py
pychamber/app/: app.py  launch.py  logger.py  main_window.py  task_runner.py
pychamber/app/objects/: __init__.py  experiment_worker.py
pychamber/app/ui/: analyzer_widget.py  analyzer_widget.ui  cal_view_dlg.py  cal_view_dlg.ui  cal_wizard.py  cal_wizard.ui  contour_plot_settings.py  contour_plot_settings.ui  experiment_controls.py  experiment_controls.ui  experiment_widget.py  experiment_widget.ui  log_dialog.py  log_dialog.ui  mainwindow.py  mainwindow.ui  new_plot_dlg.py  new_plot_dlg.ui  plot_widget.py  plot_widget.ui  polar_plot_settings.py  polar_plot_settings.ui  polar_trace_settings.py  polar_trace_settings.ui  positioner_widget.py  positioner_widget.ui  rc_resources.py  rect_plot_settings.py  rect_plot_settings.ui  rect_trace_settings.py  rect_trace_settings.ui  resources.qrc  resources_rc.py  settings.py  settings.ui  three_d_plot_settings.py  three_d_plot_settings.ui  ui.pyproject
pychamber/app/widgets/: __init__.py  analyzer_controls.py  cal_view_dialog.py  cal_wizard.py  category_combobox.py  collapsible_section.py  collapsible_widget.py  color_button.py  contour_plot.py  contour_plot_settings.py  controls_area.py  custom_dock_label.py  experiment_controls.py  filebrowse_lineedit.py  frequency_lineedit.py  frequency_validator.py  list_spinbox.py  log_dialog.py  new_plot_dlg.py  plot_dock_widget.py  plot_widget.py  polar_plot.py  polar_plot_settings.py  positioner_controls.py  rect_plot_settings.py  section_button.py  settings_dialog.py  spherical_grid.py  three_d_plot_settings.py  toggle.py
pychamber/classes/: app.py  jog_worker.py  logger.py  network_model.py  polarization.py  positioner.py  scan_worker.py  settings_manager.py
pychamber/classes/configs/: D6050.yaml
pychamber/configs/: D6050.yaml
pychamber/deprecated/: about.py  calibration.py  controller.py  layout.py  main_window.py  pop_ups.py  settings_dialog.py
pychamber/models/: __init__.py  ntwk_model.py
pychamber/plugins/: __init__.py  analyzer.py  base.py  calibration.py  experiment.py
pychamber/plugins/plots/: __init__.py  mpl_widget.py  over_freq.py  plots_container.py  plugin.py  polar.py  pychamber_plot.py  rectangular.py  three_d.py
pychamber/plugins/positioner/: __init__.py  d6050.py  plugin.py  positioner.py
pychamber/plugins/positioners/: __init__.py  plugin.py
pychamber/positioner/: __init__.py  factory.py  interface.py
pychamber/ui/: __init__.py  about.py  calibration.py  freq_spin_box.py  log_viewer.py  logger.py  mainWindow.py  main_window.py  mplwidget.py  pop_ups.py  pyconsole.py  python_console.py  resources_rc.py  settings_dialog.py  ui.py
pychamber/widgets/: __init__.py  about.py  app.py  collapsible_section.py  experiment.py  freq_lineedit.py  freq_spin_box.py  freq_validator.py  horz_tab_widget.py  jog_worker.py  log_viewer.py  mpl_widget.py  network_model.py  plots.py  scan_worker.py  settings_dialog.py
pychamber/widgets/plots/: __init__.py  mpl_widget.py  over_freq.py  plots_container.py  polar.py  pychamber_plot.py  rectangular.py  three_d.py
reference/: index.html
reference/SUMMARY/: index.html
reference/__init__/: index.html
reference/api/: index.html
reference/classes/__init__/: index.html
reference/classes/app/: index.html
reference/classes/jog_worker/: index.html
reference/classes/logger/: index.html
reference/classes/network_model/: index.html
reference/classes/polarization/: index.html
reference/classes/positioner/: index.html
reference/classes/scan_worker/: index.html
reference/classes/settings_manager/: index.html
reference/classes/worker/: index.html
reference/controller/: index.html
reference/launch/: index.html
reference/lib/: index.html
reference/logger/: index.html
reference/main_window/: index.html
reference/models/: index.html
reference/network_model/: index.html
reference/plugins/: index.html
reference/polarization/: index.html
reference/pychamber/: index.html
reference/pychamber/api/: index.html
reference/pychamber/calibration/: index.html
reference/pychamber/experiment/: index.html
reference/pychamber/experiment_result/: index.html
reference/pychamber/math_fns/: index.html
reference/pychamber/positioner/: index.html
reference/pychamber/settings/: index.html
reference/settings/: index.html
reference/utils/: index.html
reference/widgets/: index.html
resources/: resources.qrc
scripting/: index.html
search/: search_index.json
stylesheets/: extra.css
taking_a_measurement/: index.html
tests/: __init__.py  conftest.py  dummyserial.py  test_api.py  test_app.py  test_calibration.py  test_experiment_result.py  test_positioner.py  test_pychamber.py
the_interface/: index.html
ui/: mainWindow.ui
usage/: index.html
(+26 files in other folders)
